--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   background-color: #FFFFFF;
 }
 .site-nav{
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 13px;
   line-height: 15px;
@@ -27,8 +28,7 @@
 
   }
   .txt-ikki{
-font-size: 16px;
-font-weight: 400;
+
 line-height: 150%;
 letter-spacing: 0.5px;
 
@@ -44,6 +44,7 @@ letter-spacing: 0.5px;
 
   }
   .txt-buyurtma{
+font-family: 'Roboto', sans-serif;
 font-size: 13px;
 font-weight: 700;
 line-height: 15px;
@@ -80,8 +81,6 @@ letter-spacing: 0.5px;
 color: #000000;
   }
   .txt-izoh{
-font-weight: 400;
-font-size: 16px;
 line-height: 150%;
 letter-spacing: 0.5px;
 color: #000000;
@@ -105,8 +104,6 @@ background: #252420;
 }
 .txt-third-p{
   font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
   line-height: 150%;
   letter-spacing: 0.5px;
   color: #FFFFFF;
@@ -120,11 +117,8 @@ background: #252420;
   background: #F8F8F8;
 }
 
-
 .txt-last{
   font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
   line-height: 19px;
   color: #252420;
   text-decoration: none;
@@ -142,4 +136,17 @@ ul a {
 }
 .footer-list{
 width: 224px;
+}
+body{
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+
+}
+h2{
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 700;
+}
+h3{
+  font-family: 'Roboto Condensed', sans-serif;
 }
