--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,18 @@
 .site-header{
   background-color: #FFFFFF;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.site-header-actions{
+  display: flex;
+  align-items: center;
+}
+.footer-list{
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+
 }
 .site-nav{
   font-family: "Roboto", sans-serif;
@@ -15,6 +28,9 @@
 .first-back{
   background-color: #252420;
   color: #FFFFFF;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .main-content{
   width: 390px;
@@ -25,71 +41,77 @@
   line-height: 48px;
   line-height: 120%;
   letter-spacing: 0.5px;
+}
+.hero-list{
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+}
+.txt-ikki{
+  line-height: 150%;
+  letter-spacing: 0.5px;
 
-  }
-  .txt-ikki{
+}
+.hero-img{
+  width: 510px;
+  height: 510px;
+}
+.hero-hr{
+  width: 80px;
+  height: 3px;
+  background-color:  #FF7500;;
 
-line-height: 150%;
-letter-spacing: 0.5px;
+}
+.txt-buyurtma{
+  font-family: 'Roboto', sans-serif;
+  font-size: 13px;
+  font-weight: 700;
+  line-height: 15px;
+  letter-spacing: 0.5px;
+  background:#FF7500;
+  color: #FFFFFF;
+  text-decoration: none;
+}
+.txt-savol{
+  font-style: normal;
+  width: 440px;
+  font-weight: 700;
+  font-size: 72px;
+  line-height: 120%;
+  letter-spacing: 0.5px;
+  color: black;
+}
+.feature-icon-wrapper{
+  width: 100px;
+  height: 100px;
+  background-color: rgba(255, 117, 0, 0.2);
 
-  }
-  .hero-img{
-    width: 510px;
-    height: 510px;
-  }
-  .hero-hr{
-    width: 80px;
-    height: 3px;
-    background-color:  #FF7500;;
-
-  }
-  .txt-buyurtma{
-font-family: 'Roboto', sans-serif;
-font-size: 13px;
-font-weight: 700;
-line-height: 15px;
-letter-spacing: 0.5px;
-background:#FF7500;
-color: #FFFFFF;
-text-decoration: none;
-  }
-  .txt-savol{
-font-style: normal;
-width: 440px;
-font-weight: 700;
-font-size: 72px;
-line-height: 120%;
-letter-spacing: 0.5px;
-color: black;
-  }
-  .feature-icon-wrapper{
-    width: 100px;
-    height: 100px;
-    background-color: rgba(255, 117, 0, 0.2);
-
-  }
-  .feature{
-    width: 340px;
-    height: 340px;
-  }
-  .txt-small{
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 120%;
-letter-spacing: 0.5px;
-color: #000000;
-  }
-  .txt-izoh{
-line-height: 150%;
-letter-spacing: 0.5px;
-color: #000000;
-  }
-  .promo-content{
-    width: 440px;
-  }
+}
+.feature{
+  width: 340px;
+  height: 340px;
+}
+.txt-small{
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 120%;
+  letter-spacing: 0.5px;
+  color: #000000;
+}
+.txt-izoh{
+  line-height: 150%;
+  letter-spacing: 0.5px;
+  color: #000000;
+}
+.promo-content{
+  width: 440px;
+}
 .second-back{
-background: #252420;
+  background: #252420;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .promo-highlite{
   color: #FF7500;
@@ -131,12 +153,25 @@ background: #252420;
 ul a {
   list-style-type: none;
 }
-.footer-list{
+.the-end-list{
   list-style-type: none;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.footer-list{
-width: 224px;
+
+.end-list{
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between
 }
+.footer-img-list{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
 body{
   font-family: "Roboto", sans-serif;
   font-weight: 400;
