--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,15 @@
 .footer-list{
   list-style-type: none;
   display: flex;
-  justify-content: space-between;
   padding: 0;
+  margin: 0;
+  margin-right: 32px;
+}
+.sitenav-item{
+  margin-right: 32px;
+}
+.sitenav-item:last-child{
+  margin-right: 0;
 }
 .logo-link{
   transition: opacity 0.4s ease;
@@ -66,16 +73,20 @@
   line-height: 48px;
   line-height: 120%;
   letter-spacing: 0.5px;
+  margin: 0;
+  margin-bottom: 24px;
 }
 .hero-list{
   display: flex;
-  justify-content: space-between;
   list-style-type: none;
   padding: 0;
+  margin: 0;
 }
 .txt-ikki{
   line-height: 150%;
   letter-spacing: 0.5px;
+  margin-top: 0;
+  margin-bottom: 32px;
 
 }
 .hero-img{
@@ -87,6 +98,8 @@
   width: 80px;
   height: 3px;
   border: none;
+  margin: 0;
+  margin-bottom: 40px;
   background-color:  #FF7500;;
 
 }
@@ -119,6 +132,8 @@
   line-height: 120%;
   letter-spacing: 0.5px;
   color: black;
+  margin-bottom: 72px;
+  margin-top: 0;
 }
 .features-main{
   padding-top: 210px;
@@ -137,6 +152,10 @@
 .feature{
   width: 340px;
   height: 340px;
+  margin-right: 40px;
+}
+.feature:last-child{
+  margin-right: 0;
 }
 .txt-small{
   font-style: normal;
@@ -169,15 +188,25 @@
   font-style: normal;
   font-weight: 700;
   font-size: 40px;
-  line-height: 120%;
+  line-height: 48px;
   letter-spacing: 0.5px;
   color: #FFFFFF;
+  margin-top: 0;
+  margin-bottom: 24px;
 }
 .txt-third-p{
   font-style: normal;
   line-height: 150%;
   letter-spacing: 0.5px;
   color: #FFFFFF;
+  margin-top: 0;
+  margin-bottom: 12px;
+}
+.txt-third-p:last-child{
+  margin-bottom: 0;
+}
+.promo-info-wrapper{
+  margin-bottom: 12px;
 }
 .img-book{
   width: 440px;
@@ -209,6 +238,8 @@
   height: 2px;
   background-color: rgba(37, 36, 32, 0.5);
   border: 0;
+  margin-top: 40px;
+  margin-bottom: 64px;
 }
 ul a {
   list-style-type: none;
@@ -216,6 +247,12 @@ ul a {
 .oxirgi-list{
   list-style-type: none;
   padding: 0;
+  margin: 0;
+  line-height: 19px;
+  margin-right: 68px;
+}
+.oxirgi-list:last-child{
+  margin-right: 0;
 }
 .the-end-list{
   list-style-type: none;
@@ -229,12 +266,23 @@ ul a {
   display: flex;
   justify-content: space-between;
   padding: 0;
+  margin: 0;
+}
+.end-list li{
+margin-right: 16px;
+}
+.end-list li:last-child{
+  margin-right: 0;
 }
 .end-list a:hover{
   color: #FF7500;
 }
 .end-list a{
   color: #252420;
+  display: block;
+}
+.end-list svg{
+  display: block;
 }
 .end-list a:active{
   opacity: 0.6;
