--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,31 @@
+*{
+  box-sizing: border-box;
+}
+.container{
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1140px;
+  padding-left: 20px;
+  padding-right: 20px;
+
+}
 *:focus{
   outline: 2px dotted #FF7500;
   outline-offset: 3px;
 }
 .site-header{
   background-color: #FFFFFF;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   border-top: 5px solid #FF7500;
   padding-top: 16px;
   padding-bottom: 16px;
 }
+.site-header-container{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .site-header-actions{
   display: flex;
   align-items: center;
@@ -61,11 +76,13 @@
 .first-back{
   background-color: #252420;
   color: #FFFFFF;
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+.hero-container{
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-top: 80px;
-  padding-bottom: 80px;
 }
 .main-content{
   width: 390px;
@@ -96,6 +113,7 @@
   width: 510px;
   height: 510px;
   border-radius: 8px;
+  box-shadow: 24px 24px 0 0 rgba(255, 117, 0, 0.6);
 }
 .hero-hr{
   width: 80px;
@@ -150,7 +168,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-
+  margin-bottom: 32px;
 }
 .feature{
   width: 340px;
@@ -167,22 +185,32 @@
   line-height: 120%;
   letter-spacing: 0.5px;
   color: #000000;
+  margin-top: 0;
+  margin-bottom: 12px;
 }
 .txt-izoh{
   line-height: 150%;
   letter-spacing: 0.5px;
   color: #000000;
+  margin: 0;
+}
+.promo{
+  padding-top: 120px;
+  padding-bottom: 160px;
 }
 .promo-content{
   width: 440px;
   padding-top: 64px;
   padding-bottom: 64px;}
-.second-back{
+
+.promo-inner{
   background: #252420;
+  border-radius: 12px;
+  padding: 64px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-radius: 12px;
+  color: #FFFFFF;
 }
 .promo-highlite{
   color: #FF7500;
@@ -257,6 +285,12 @@ ul a {
 .oxirgi-list:last-child{
   margin-right: 0;
 }
+.oxirgi-list li{
+  margin-bottom: 16px;
+}
+.oxirgi-list li:last-child{
+  margin-bottom: 0;
+}
 .the-end-list{
   list-style-type: none;
   display: flex;
@@ -294,15 +328,13 @@ margin-right: 16px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-
 }
-
 body{
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 16px;
-
+  padding: 0;
+  margin: 0;
 }
 h2{
   font-family: 'Roboto Condensed', sans-serif;
