--- a/css/style.css
+++ b/css/style.css
@@ -294,8 +294,11 @@ ul a {
 .the-end-list{
   list-style-type: none;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
+  padding: 0;
+  width: 1100px;
+  height: 229px;
 }
 
 .end-list{
